# home-etc

./: .cvsignore  .gitignore  AUTHORS  CONTRIBUTORS  DEVEL-NOTES  FILES  HOME-ETC.pl.txt  HOME-ETC.txt  Makefile  Makefile.am  README  TODO  autogen.sh  configure.ac  congen  home-etc.spec  home-etc.spec.in  home_etc.spec  test.c
doc/: DEVEL-NOTES  HOME-ETC.pl.txt  Makefile  Makefile.am  get_home_etc.3  home_etc.3  home_etc_expand_tilde.3  home_etc_path.3  home_etc_reset.3  path_canonize.3
home_etc-0.1/: Makefile
home_etc-0.1/sh/: home-etc.sh
home_etc-0.1/src/: Makefile  home_etc.c
patchwork/: Makefile.am  zrobione
sh/: .cvsignore  .gitignore  Makefile  Makefile.am  home-etc  home-etc.csh  home-etc.sh
skel/: .home_etc  Makefile  Makefile.am
src/: .cvsignore  Makefile  Makefile.am  core.c  core.h  example.c  example2.c  example3.c  example4.c  home_etc.c  home_etc.h  includes.h  libhome_etc.la  realpath.c  test.c  wrap_fopen.c  wrap_fopen.h
