AC_INIT([home-etc],[1.0.7],[siefca/at/pld-linux.org])
AM_INIT_AUTOMAKE

dnl See pinfo --node=Libtool\ versioning libtool
LT_CURRENT=1
LT_REVISION=0
LT_AGE=0

AM_PROG_LIBTOOL

AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

AC_CONFIG_FILES([Makefile 
			 src/Makefile
			 doc/Makefile
			 sh/Makefile
			 skel/Makefile
			 patchwork/Makefile])
AC_OUTPUT
